--- a/public/mymanage/css/common.css
+++ b/public/mymanage/css/common.css
@@ -1,3 +1,12 @@
 .body_bg {
   background-color: #222D32;
 }
+.mt_150 {
+  margin-top: 150px;
+}
+
+.panel-title {
+height: 40px;
+line-height: 40px;
+font-size: 20px;
+}
